primeira versão do front

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -14,7 +14,7 @@
   <!-- Topbar -->
   <header class="topbar" aria-label="Barra superior">
     <div class="container topbar-inner">
-      <a class="brand" href="#" aria-label="Início Qmovi">
+      <a class="brand" href="dashboard.html" aria-label="Início Qmovi">
         <img class="logo" src="img/qLaranjaMoviAzul.png" alt="Qmovi" />
       </a>
 
@@ -33,7 +33,7 @@
 
   <main>
     <section class="container grid" aria-label="Lista de módulos">
-      <a class="module" href="#almoxarifado" data-module="almoxarifado">
+      <a class="module" href="almoxarifado.html" data-module="almoxarifado">
         <div class="ico"><i data-lucide="box"></i></div>
         <h3>Almoxarifado</h3>
         <p>Materiais, estoque, endereçamento</p>
