--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -39,7 +39,7 @@
         <p>Materiais, estoque, endereçamento</p>
       </a>
 
-      <a class="module" href="#portaria" data-module="portaria">
+      <a class="module" href="portaria.html" data-module="portaria">
         <div class="ico"><i data-lucide="key"></i></div>
         <h3>Portaria</h3>
         <p>Entrada/saída, visitantes e cargas</p>
@@ -69,7 +69,7 @@
         <p>Requisições e pedidos a fornecedores</p>
       </a>
 
-      <a class="module" href="#rh" data-module="rh">
+      <a class="module" href="recursosHumanos.html" data-module="rh">
         <div class="ico"><i data-lucide="users"></i></div>
         <h3>Recursos Humanos</h3>
         <p>Pessoas, cargos e ponto</p>
