--- a/frontend/recursosHumanos.html
+++ b/frontend/recursosHumanos.html
@@ -42,7 +42,7 @@
 
     <!-- Grade 2x2 -->
     <section class="container grid grid--two" aria-label="Módulos de RH">
-      <a class="module" href="rh-usuarios.html" data-module="rh-usuarios">
+      <a class="module" href="rhUsuarios.html" data-module="rh-usuarios">
         <div class="ico"><i data-lucide="user-plus"></i></div>
         <h3>Usuários</h3>
         <p>Adicionar, editar e desativar usuários. Perfis e permissões.</p>
